// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transform fixtures comments.ts 1`] = `
"import { ref, computed } from 'vue';/* import { ref } from 'vue' */
// import { computed } from 'vue'

const foo = ref(0)
const bar = computed(() => {})

// reactive
"
`;

exports[`transform fixtures custom.js 1`] = `
"import { default as customDefault, customNamed } from 'custom';const a = customDefault(customNamed())
"
`;

exports[`transform fixtures non-target.js 1`] = `
"useNonTarget()
"
`;

exports[`transform fixtures react.jsx 1`] = `
"import { useState } from 'react';export function Component() {
  const [count, setCount] = useState()

  return <div>{ count }</div>
}
"
`;

exports[`transform fixtures react-existing.jsx 1`] = `
"import React, { useState } from 'react';

export function Component() {
  const [count, setCount] = useState()

  return <div>{ count }</div>
}
"
`;

exports[`transform fixtures svelte.svelte 1`] = `
"import { writable } from 'svelte/store';import { tweened } from 'svelte/motion';import { cubicOut, quintOut } from 'svelte/easing';import { onMount } from 'svelte';import { flip } from 'svelte/animate';import { fade } from 'svelte/transition';const list = writable([1, 2, 3])
const size = tweened(1, {
  duration: 300,
  easing: cubicOut
});
onMount(() => {})

{#each $list as n (n)}
<div animate:flip=\\"{{delay: 250, duration: 250, easing: quintOut}}\\">
  {n}
</div>
{/each}

{#if condition}
  <div transition:fade=\\"{{amount: 10}}\\">
    fades in and out
  </div>
{/if}
"
`;

exports[`transform fixtures vue.js 1`] = `
"import { ref } from 'vue';const a = ref(0)
"
`;
